# conference_paper_citation

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.github/workflows/composite/setup/: action.yml
backend/: main.py
backend/templates/: index.html  template.html
tests/: test_main.py
