[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["YuminosukeSato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.0"}
httpx = "^0.25.0"
jinja2 = "^3.1.2"
requests = "^2.31.0"
pytest = "^7.4.3"
semanticscholar = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"
mypy = "^1.6.1"
pytest = "^7.4.3"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "B", # flake8-bugbear
  "I", # isort
]

ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
]

unfixable = [
  "F401", # module imported but unused
  "F841", # local variable is assigned to but never used
]

[tool.mypy]
python_version = 3.9
strict = true

[tool.black]
target-version= ['py310']
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
